2005-04-08  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/20909
	* include/bits/locale_facets.tcc (num_put<>::_M_insert_float):
	Don't even try to group numbers like 2e20, i.e., no decimal
	point, scientific notation.
	* testsuite/22_locale/num_put/put/char/20909.cc: New.
	* testsuite/22_locale/num_put/put/wchar_t/20909.cc: Likewise.

2005-04-08  Kelley Cook  <kcook@gcc.gnu.org>

	* acinclude.m4 (GLIBCXX_ENABLE_SYMVERS): Define _GLIBCXX_ASM_SYMVER.
	* acconfig.h: Delete file.
	* Makefile.in, acinclude.m4, configure: Regenerate.

2005-04-08  Kelley Cook  <kcook@gcc.gnu.org>

	* linkage.m4 (GLIBCXX_MAYBE_UNDERSCORED_FUNCS): New macro.
	(GLIBCXX_CHECK_MATH_DECL_AND_LINKAGE_1,
	GLIBCXX_CHECK_MATH_DECL_AND_LINKAGE_2,
	GLIBCXX_CHECK_MATH_DECL_AND_LINKAGE_3,
	GLIBCXX_CHECK_MATH_DECLS_AND_LINKAGES_1,
	GLIBCXX_CHECK_STDLIB_DECL_AND_LINKAGE_2): Use it.
	(GLIBCXX_CHECK_MATH_SUPPORT): Delete obsolete comment.
	* acconfig.h: Delete redundant macros.
	* config.h.in, configure: Regenerate.

2005-04-08  Kelley Cook  <kcook@gcc.gnu.org>

	* linkage.m4 (GLIBCXX_CHECK_MATH_DECLS_AND_LINKAGES_1): Eliminate
	a subshell and if test fails, test for same functions with 
	leading underscore.
	(GLIBCXX_CHECK_MATH_SUPPORT): Eliminate seperate checks for _funcs.
	* configure: Regenerate.

2005-04-08  Danny Smith  <dannysmith@users.sourceforge.net>
	    Paolo Carlini  <pcarlini@suse.de>
	    		
	PR libstdc++/20806
	* config/os/mingw32/os_defines.h: Define
	_GLIBCXX_HAVE_DOS_BASED_FILESYSTEM.
	* config/os/newlib/os_defines.h: Likewise, for __CYGWIN__.
	* include/bits/fstream.tcc (basic_filebuf<>::showmanyc()):
	Use it.
	(basic_filebuf<>::xsgetn(_CharT*, streamsize)): Likewise.

2005-04-08  Kelley Cook  <kcook@gcc.gnu.org>

	* acconfig.h: Sort the bottom section.
	* config.h.in: Regenerate.

2005-04-08  Kelley Cook  <kcook@gcc.gnu.org>

	* acconfig.h: Remove redundant HAVE_FLOAT_H.
	* config.h.in: Regenerate.

2005-04-08  Kelley Cook  <kcook@gcc.gnu.org>
