@@ -1,3 +1,9 @@
+2005-04-08  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/Makefile.am: Remove libv3test.a.
+	* testsuite/Makefile.in: Regenerate.
+	* testsuite/lib/libstdc++.exp (v3_target_compile): Fix comments.
+	
 2005-04-08  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/20909
